--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,11 @@ exclude: ["README.md"]
 
 plugins:
   - jekyll-paginate
+  - jekyll-multiple-languages-plugin
 
 # paginate
 paginate: 3
 paginate_path: "/blog/page:num/"
+
+# jekyll-multiple-languages-plugin settings:
+languages: ["en"]
