--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,4 @@ paginate_path: "/blog/page:num/"
 
 # jekyll-multiple-languages-plugin settings:
 languages: ["en"]
+exclude_from_localizations: ["img", "css", "fonts", "feed.xml", "_posts", "blog"]
