Many site adjustments - Added a guide layout with full-width text - Changed the current guides to guide layout from post - Fixed a weird svg with imperfections - Added translation for liquid staking and the picture for its only entry - Fixed ordered lists not showing correctly - Removed Guides from blog home page - CSS fixes and improvements for all of the above

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -103,6 +103,7 @@ buyfiro:
   pairing: pairing
   fchead1: "firo / crypto"
   csservice: coin-swapping services
+  liquidstaking: liquid staking
   
 tech:
   heading: Technology
