--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -133,7 +133,7 @@ roadmap:
   rebrand: Rebrand
   lelantus: Lelantus Activation
   lelantusdesc: Lelantus is our next generation privacy protocol that offers the highest levels of practical privacy without trusted setup and only relying on solid cryptographic assumptions. Lelantus supports anonymity sets that are several magnitudes larger than other privacy systems that do not have trusted setup.
-  chainlocks: Chainlocks (almost complete)
+  chainlocks: Chainlocks
   chainlocksdesc: Chainlocks utilize Firo’s masternode network to protect against 51% attacks. Transactions achieve finality as soon as 1 block is confirmed.
   rap: RAP Addresses (almost complete)
   rapdesc: RAP addresses allow a publicly shareable address that does not allow third parties to see how much or when it has received funds.
