Initial Chinese localization

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -127,6 +127,7 @@ team:
   community: community managers
   
 roadmap:
+  development: Development
   heading: Roadmap
   znodes: Deterministic Znodes
   mnodesq: Long Lived Masternode Quorums
