Fix navigation.guides in _i18n/en.yml

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -13,6 +13,7 @@ navigation:
   getfiro: Get Firo
   about: About
   community: Community
+  guides: Guides
   blog: Blog
   crowdfunding: Crowdfunding
   download: Download wallets
