--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -147,7 +147,7 @@ roadmap:
   lelantusdesc: Lelantus is our next generation privacy protocol that offers the highest levels of practical privacy without trusted setup and only relying on solid cryptographic assumptions. Lelantus supports anonymity sets that are several magnitudes larger than other privacy systems that do not have trusted setup.
   chainlocks: Chainlocks
   chainlocksdesc: Chainlocks utilize Firo’s masternode network to protect against 51% attacks. Transactions achieve finality as soon as 1 block is confirmed.
-  rap: RAP Addresses (almost complete)
+  rap: RAP Addresses
   rapdesc: RAP addresses allow a publicly shareable address that does not allow third parties to see how much or when it has received funds.
   instant: Instant Send (in progress)
   instantdesc: Instant Send utilizes Firo’s masternode network to allow transactions to be confirmed within a few seconds allowing for practical use as a medium of exchange.
@@ -159,7 +159,7 @@ roadmap:
   mobiledesc: A native, private by default mobile wallet that will have full Lelantus transaction support. The SDK will allow third party wallets to support Lelantus.
   renfiro: renFIRO
   renfirodesc: Firo is integrating with renVM to allow trustless bridging of Firo into Ethereum allowing users to enter and exit the defi ecosystem trustlessly and without KYC.
-  progpow: ProgPOW
+  progpow: ProgPOW (in progress)
   progpowdesc: To further improve ASIC resistance, a ProgPOW variant will replace MTP. This will also allow for much smaller blocks that reduce the bandwidth and storage required of all nodes.
   research: Research
   aura: Aura
